@@ -4,3 +4,7 @@ PREFIX  = @ac_prefix@
 CONFIG += @ac_debug@
 #INCLUDEPATH += @ac_incpath@
 #LIBS += @ac_libs@
+
+# Extra optimization flags
+QMAKE_CXXFLAGS += @ac_cflags@
+QMAKE_LFLAGS += @ac_ldflags@
