@@ -3,6 +3,7 @@ Name=@PACKAGE_NAME@
 Version=1.0
 GenericName=XG Editor
 Comment=QXGEdit is a Qt GUI XG editor application
+Keywords=midi;sysex;editor;
 Exec=@ac_prefix@/bin/qxgedit
 Icon=qxgedit
 Categories=Audio;AudioVideo;Midi;X-Alsa;Qt;
